--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -47,6 +51,10 @@ body {
         gap: 15px;
         margin-top: 50px;
     }
+}
+
+a:has(.outline-button) {
+    text-decoration: none;
 }
 
 .outline-button {
@@ -152,7 +160,7 @@ body {
 
     height: 100vh;
 
-    .content{
+    .content {
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -197,7 +205,7 @@ body {
 
     height: 100vh;
 
-    .content{
+    .content {
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -224,18 +232,21 @@ body {
             background-color: rgba(0, 0, 0, 0.2);
             box-shadow: 0 4px 4px rgba(0, 0, 0, 0.45);
 
-            .name{
+            .name {
                 display: flex;
                 align-items: center;
                 gap: 8px;
+
                 img {
                     height: 25px;
                 }
             }
-            .button-wrapper{
+
+            .button-wrapper {
                 margin-top: 10px;
             }
-            button{
+
+            button {
                 width: 100px;
                 height: 25px;
             }
@@ -255,7 +266,7 @@ body {
 
     height: 100vh;
 
-    .content{
+    .content {
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -282,7 +293,7 @@ body {
             color: white;
             text-decoration: none;
 
-            .name{
+            .name {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -307,7 +318,7 @@ body {
                 }
             }
 
-            .data{
+            .data {
                 display: flex;
                 justify-content: center;
                 padding: 10px;
@@ -319,6 +330,61 @@ body {
                 box-shadow: 0 4px 4px rgba(0, 0, 0, 0.45);
                 color: rgba(255, 255, 255, 0.6);
             }
+        }
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .home {
+        flex-direction: column;
+        align-items: center;
+
+        img {
+            width: 90%;
+        }
+
+        .right {
+            order: 0;
+        }
+
+        .left {
+            order: 1;
+        }
+
+        .side.left{
+            align-items: normal;
+            padding-left: 0;
+        }
+    }
+
+    .home, .skills, .projects, .contact {
+        height: auto;
+        padding: 30px 0;
+        box-sizing: border-box;
+
+        .content {
+            .title {
+                width: 100%;
+                text-align: center;
+            }
+
+            .description {
+                width: 100%;
+                text-align: center;
+                padding: 20px;
+                box-sizing: border-box;
+            }
+
+            .button-wrapper {
+                justify-content: center;
+            }
+        }
+    }
+
+    .projects {
+        .list {
+            flex-direction: column;
+            width: auto
         }
     }
 }
